--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,55 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    /* text-decoration: none; */
 }
 :root{
     --primary:#638889;
     --second :#9DBC98;
     --light:#F9EFDB;
     --fourth:#EBD9B4;
-    --blue-primary:'#3399ff'
+    --blue-primary:#3399ff;
+    --hover:#e5eaf299; 
+    --hover-2:#6b7a90; 
+    /* #6b7a90 */
+    --sign: #3399ff;
+}
+/* borderRadius:'10px' */
+/* background: `linear-gradient(to right bottom, #007fff, blue 120%)`,
+boxShadow:' rgba(0, 0, 0, 0.1) 0px 20px 25px, rgba(0, 0, 0, 0.04) 0px 10px 10px', */
+/* border:'1px solid e5eaf299', */
+/* sign{
+} */
+@font-face {
+    font-family: AhmedBold ;
+    src: url(../public/Font/Lora-SemiBold.ttf);
+    font-weight: 900;
+}@font-face {
+    font-family: AhmedBold ;
+    src: url(../public/Font/Lora-Bold.ttf);
+    font-weight: 600;
+}
+@font-face {
+    font-family: AhmedBold ;
+    src: url(../public/Font/Lora-Medium.ttf);
+    font-weight: normal;
+}
+@font-face {
+    font-family: AhmedBold ;
+    src: url(../public/Font/Lora-Regular.ttf);
+    font-weight: 300;
+}
+/* _______________ */
+@keyframes rotate {
+    0% {
+        transform: rotateY(0deg);
+      }
+      50% {
+        transform: rotateY(180deg);
+      }
+      100% {
+        transform: rotateY(360deg);
+      }
+    
+
 }
